# iot-home-controller

./: README.md  _env  pyproject.toml
alice/: serializers.py  services.py  urls.py  views.py
config/: schedule.py  settings.py  urls.py
core/: admin.py  apps.py  models.py  receivers.py  urls.py  views.py
core/api/: serializers.py  urls.py  viewsets.py
core/services/: hardware_api.py  raw_mqtt.py
core/templates/: main.html
ms/: readme.md
ms/hw-ctrl/: deploy.sh  hw_ctrl.py  sensors.py
ms/mqtt-sub/: _env  mqtt-sub.service  mqtt_sub.py
ms/rc-mqtt/: rc-mqtt.service  rc_mqtt.py
